--- a/demos/AI/simple_not_complete.html
+++ b/demos/AI/simple_not_complete.html
@@ -1,2 +1,2 @@
-<body bgcolor="black"><canvas id="canvas"></canvas></body>
+<body bgcolor="black"><canvas id="canvas" width="640" height="480"></canvas></body>
 <script src="./simple_not_complete.js"></script>
