--- a/Workshop/activities.html
+++ b/Workshop/activities.html
@@ -8,6 +8,7 @@
     <title>Activities</title> 
     <!-- 0. load the javascript data for cats and activities. -->
     <script src="./scripts/activities.js"></script>
+    <script src="./scripts/activities_main.js"></script>
 </head>
 <body>
    <!-- 0b. show empty selects in html for cats and activities. -->
@@ -15,40 +16,6 @@
         <option value="">Select a Category</option>
     </select>
     <select name="activitiesElement" id="activitiesElement"></select>
+    <div id="details">?</div>
 </body>
-<script>
-    // <!-- 1. show cat list. -->
-    for(let cat of categories){
-        const option = document.createElement("option");
-        option.innerText = cat;
-        cats.appendChild(option);
-    }
-
-    // <!-- 2. listen for change in cat list. -->
-    cats.addEventListener("change", e=>{
-        // <!-- 3. clear and show matching activities. -->
-        activitiesElement.innerHTML = ""; //CLEAR - EMPTY OUT OLD OPTIONS
-        for(let a of activities){
-            if(cats.value == a.category){
-                const option = document.createElement("option");
-                option.innerText = a.name;
-                activitiesElement.appendChild(option);
-            }
-        }
-    });
-    
-    // <!-- 4. listen for activity change. -->
-    
-    // <!-- 5. display the details. -->
-
-    // let activities = [
-//    {
-//         category: "Adventures", 
-//         id: "A101", 
-//         name: "Valley Hot Air Balloons", 
-//         description: "Enjoy a lovely hot air balloon ride over the valley at sunrise.  Call 800-555-1212 to reserve a date/time after you complete your e-ticket purchase.", 
-//         location: "121 S. Main Street",
-//         price: 265.00 
-//    },
-    </script>
 </html>
